--- a/_data/parks-and-rec.yml
+++ b/_data/parks-and-rec.yml
@@ -3,7 +3,7 @@
   charts:
     - title: All Customer Service Requests (Total Department)
       summary: The City tracks at a high level the amount of services requested by citizens (including arborist, forestry, and skilled services) that have been completed on time in accordance with their Service Level Agreement (ranging from a few hours to several days, depending on the task). The chart below shows the total customer-initiated service requests (blue, left) and the percentage of those service requests that were resolved within the Department's target timeframes (red, right)
-      description: The number of Service Requests the Department receives tends to fluctuate seasonsally betweem 1,000-2,000 per month.  Performance on completing these requests within target timeframes has shown a distinct upward trend since the start of 2014.
+      description: The number of Service Requests the Department receives tends to fluctuate seasonally betweem 1,000-2,000 per month.  Performance on completing these requests within target timeframes has shown a distinct upward trend since the start of 2014.
       note: In any given month, the "Total Service Requests" metric is defined as the sum of the number of Service Requests closed during the month and the number of Service Requests open as of the end of the month.  Volume is calculated this way to ensure that open Service Requests continue to count towards performance until they are closed. <br><br>Add or remove data points by clicking on the name in the index above. Hover your cursor over the results in the above chart for more information. A pop-up box will display month, year, measure, and result for each data point.
       size: full
       department: DPR
@@ -19,7 +19,7 @@
       series2-label: Resolved Within Target Timeframe
 
     - title: Arborist Service Requests
-      summary: Tree Inspections are conducted by City of Atlanta Parks and Recreation Department arborist for trees in the public right of way. Arborists evaluate trees to determine if they are dead, dying, diseased or hazardous; and require maintenance such as pruning or removal. The chart below shows the total customer-initiated arborist inspection requests (blue, left) and the percentage of those service requests that were resolved within the Department's target timeframes (red, right).
+      summary: Tree Inspections are conducted by City of Atlanta Parks and Recreation Department arborists for trees in the public right of way. Arborists evaluate trees to determine if they are dead, dying, diseased or hazardous and require maintenance such as pruning or removal. The chart below shows the total customer-initiated arborist inspection requests (blue, left) and the percentage of those service requests that were resolved within the Department's target timeframes (red, right).
       description: Arborist Service Requests vary greatly by season, but the team is usually near or above target of 90% regardless of volume.
       note: In any given month, the "Total Service Requests" metric is defined as the sum of the number of Service Requests closed during the month and the number of Service Requests open as of the end of the month.  Volume is calculated this way to ensure that open Service Requests continue to count towards performance until they are closed. <br><br>Add or remove data points by clicking on the name in the index above. Hover your cursor over the results in the above chart for more information. A pop-up box will display month, year, measure, and result for each data point.
       size: half
@@ -73,7 +73,7 @@
   group-description:
   charts:
     - title: Scheduled Maintenance Completed on Schedule
-      summary: Park Maintenance is handled by Park District Operations and is divided by quadrants. Parks are maintained on a ten day maintenance schedule. Parks maintenance includes mowing, blowing, trimming of shrubbery, and trash removal. The chart below shows the percentage of scheduled park mowing, mulching, pruning, trash pickup that is completed on schedule.description
+      summary: Park Maintenance is handled by Park District Operations and is divided by quadrants. Parks are maintained on a ten day maintenance schedule. Parks maintenance includes mowing, blowing, trimming of shrubbery, and trash removal. The chart below shows the percentage of scheduled park mowing, mulching, pruning, trash pickup that is completed on schedule.
       note: Add or remove data points by clicking on the name in the index above. Hover your cursor over the results in the above chart for more information. A pop-up box will display month, year, measure, and result for each data point.
       description: Litter and garbage removal have remained consistently at or above 90%. Mulching, mowing, trimming and blowing hit 90% in the peak summer months but drop towards 50% in the winter as the Department ramps down on seasonal employees to complete these activities.  It should be noted that the volume of these activities is extremely cyclical, with volumes significantly increasing in the spring and summer months.
       size: full
@@ -89,8 +89,8 @@
   group-description: The Office of Recreation currently manages an array of facilities which include thirty-three recreation centers, Centers of Hope, indoor and outdoor pools, spray grounds, tennis courts, basketball courts, ball fields, playgrounds, and tennis centers. The charts below show data on facility vists, membership and youth attendance. Please note that the numbers below reflect only the X facilities that are managed/operated by the Department.  The Department has X facilities that are managed through a third party via an MOU agreement.
   charts:
     - title: Recreation Center Attendance
-      summary: The charts below shows total attendance at Recreation facilities, as captured through the Department's iParks application.
-      description: Since the Department started tracking attendance data via its iParks application in July 2014, recreation center visits have ranged from 36,000-55,000.  This numbers fluctuates significantly based on seasonality, with higher numbers coming in summer months.
+      summary: The chart below shows total attendance at Recreation facilities, as captured through the Department's iParks application.
+      description: Since the Department started tracking attendance data via its iParks application in July 2014, recreation center visits have ranged from 36,000-55,000.  This number fluctuates significantly based on seasonality, with higher numbers coming in summer months.
       note: Add or remove data points by clicking on the name in the index above. Hover your cursor over the results in the above chart for more information. A pop-up box will display month, year, measure, and result for each data point.
       size: half
       department: DPR
@@ -102,7 +102,7 @@
       series1-label: Total people
     - title: Recreation Center Memberships
       summary: The chart below shows the total active memberships at Recreation facilities.
-      description: Since the Department started tracking attendance data via its iParks application in July 2014, active memberships has ranged from 3,200-5,300. This number fluctuates significantly based on seasonality, with higher numbers coming in summer months.
+      description: Since the Department started tracking attendance data via its iParks application in July 2014, active memberships have ranged from 3,200-5,300. This number fluctuates significantly based on seasonality, with higher numbers coming in summer months.
       note: Add or remove data points by clicking on the name in the index above. Hover your cursor over the results in the above chart for more information. A pop-up box will display month, year, measure, and result for each data point.
       size: half
       datasource: rec_center_memberships
@@ -113,7 +113,7 @@
 
     - title: Youth Attendance and Programming
       summary: The department offers an array of diverse programs for youth that will improve academic and athletic performance while building character and sharpening social skills. The chart below shows the total youth being served by After School and Camp Best Friends (blue) and other Recreation Center (red) Programming such as swim lessons, sports and tots programs.
-      description: With new investments in facilities and programming, lead by the Mayor's Centers of Hope initiative, youth attendance peaked at over 3,000 per month in the summer of 2014.
+      description: With new investments in facilities and programming, led by the Mayor's Centers of Hope initiative, youth attendance peaked at over 3,000 per month in the summer of 2014.
       note: Add or remove data points by clicking on the name in the index above. Hover your cursor over the results in the above chart for more information. A pop-up box will display month, year, measure, and result for each data point.
       size: full
       department: DPR
