--- a/_data/aviation.yml
+++ b/_data/aviation.yml
@@ -13,10 +13,14 @@
       series1-type: column
       series1-format: number
       series1-label: Total Passenger Volume Year-To-Date
+      series1-min:
+      series1-max:
       series2-metric: Result
       series2-type: line
       series2-format: percentage
       series2-label: Year-over-Year Volume Change
+      series2-min:
+      series2-max:
 
     - title: Year-To-Date Cargo Volume
       summary: Total year-to-date cargo volume  (blue, left) and the year-over-year percentage change in cargo volume (red, right)
@@ -30,10 +34,14 @@
       series1-type: column
       series1-format: number
       series1-label: Total Cargo Volume Year-To-Date
+      series1-min:
+      series1-max:
       series2-metric: Result
       series2-type: line
       series2-format: percentage
       series2-label: Year-over-Year Volume Change
+      series2-min:
+      series2-max:
 
 - group-title: Section II - Processing and Wait Times
   group-description:
@@ -50,6 +58,8 @@
       series1-type: line
       series1-format: percentage
       series1-label: Under Target Wait Time
+      series1-min:
+      series1-max:
 
     - title: Average Customs Processing Times
       summary: The average time it takes for an inbound passenger to get processed through customs
@@ -63,3 +73,5 @@
       series1-type: line
       series1-format: number
       series1-label: Minutes
+      series1-min:
+      series1-max:      
