--- a/_data/code-enforcement.yml
+++ b/_data/code-enforcement.yml
@@ -12,11 +12,15 @@
       series1-metric: Volume
       series1-type: column
       series1-format: number
+      series1-min:
+      series1-max:
       series1-label: Total Service Requests
       series2-metric: Result
       series2-type: line
       series2-format: percentage
       series2-label: Resolved Within Target Timeframe
+      series2-min:
+      series2-max:
 
     - title: Property Maintenance Inspection Service Requests
       summary: The Atlanta Office of Code Enforcement receives a number of service requests each month from the public to inspect possible property maintenance violations. These include junk vehicles, overgrowth on property, or debris and garbage. The chart below shows the total volume of active service requests for a month (blue) and the percent of those that are within their inspection completion goal of 120 calendar days (red).
@@ -30,10 +34,14 @@
       series1-type: column
       series1-format: number
       series1-label: Total Service Requests
+      series1-min:
+      series1-max:
       series2-metric: Result
       series2-type: line
       series2-format: percentage
       series2-label: Resolved Within Target Timeframe
+      series2-min:
+      series2-max:
     - title: Highly Hazardous Inspection Service Requests
       summary: The Atlanta Office of Code Enforcement receives a number of service requests from the public to inspect possible highly hazardous housing conditions. These include broken HVAC, broken windows and doors, and roof collapses without repair attempts. The chart below shows the total volume of active service requests for a month (blue) and the percent of those that are within their inspection completion goal of 58 calendar days (red).
       description: The Office has seen a 30% increase in the number of highly hazardous inspections completed within the time goals. This improvement has come as overdue requests are closed, as seen in dropping active service request volumes.
@@ -46,10 +54,14 @@
       series1-type: column
       series1-format: number
       series1-label: Total Service Requests
+      series1-min:
+      series1-max:
       series2-metric: Result
       series2-type: line
       series2-format: percentage
       series2-label: Resolved Within Target Timeframe
+      series2-min:
+      series2-max:
 - group-title: Section II - Inspection Volume
   group-description:
   charts:
@@ -65,3 +77,5 @@
       series1-type: column
       series1-format: number
       series1-label: Total Code Complaints
+      series1-min:
+      series1-max:
