--- a/_data/office-of-buildings.yml
+++ b/_data/office-of-buildings.yml
@@ -13,10 +13,14 @@
       series1-type: column
       series1-format: Number
       series1-label: Total Service Requests
+      series1-min:
+      series1-max:
       series2-metric: Result
       series2-type: line
       series2-format: percentage
       series2-label: Resolved Within Target Timeframe
+      series2-min:
+      series2-max:
     - title: Permit Inspection Customer Service Requests
       summary: The Office of Buildings is responsible for carrying out arborist, building, mechanical, electrical and plumbing inspections across the city. Altogether, around 6,500 permit inspections are undertaken in a normal month.  The office strives to meet its customer service target of responding to customer requests for building inspections within two business days (six days for arborist inspections).
       description: As the figure shows, the Office has an excellent track record of performing nearly all inspections within the target timeframe. Despite a small dip in inspection volume and departmental responsiveness in January and February 2014 (the result of successive ice storms), performance has consistently been at 99% or better.
@@ -29,10 +33,14 @@
       series1-type: column
       series1-format: Number
       series1-label: Total Service Requests
+      series1-min:
+      series1-max:
       series2-metric: Result
       series2-type: line
       series2-format: percentage
       series2-label: Resolved Within Target Timeframe
+      series2-min:
+      series2-max:
     - title: Quality Control and Plan Review Efficiency
       summary: Before a permit application is submitted, it goes through a Quality Control Review (QCR). During QCR, the application is reviewed to make sure that all of the necessary paperwork is present and the application is complete. This gives the customer an early opportunity to gather additional documents before starting the formal application process. The goal of QCR is to make the application review process smoother and ultimately quicker.  Once an application has been approved by QCR, it moves to a full plan review.  This chart measures how often an application makes it through each of these phases on the first try, which is a good measure of the Office's ability to accurately communicate plan requirements to applicants.
       description: The results show a decrease in the percentage of customers that have had their applications approved for submittal after the first QCR review – from 80-percent plus in mid-2013 to just-over 50 percent in April 2014. Plan review approvals upon first review have consistenly stayed between 60-70%.  One interpretation of this result is that the Office needs to better communicate with its customers and the public about the information they need to provide when they are applying for a permit. The Office has noted this performance information and has re-vamped its website to set out more clearly what the information requirements are for different types of permits.
@@ -44,6 +52,8 @@
       series1-metric: Result
       series1-type: line
       series1-format: percentage
+      series1-min:
+      series1-max:
 
 - group-title: Section II - Building Permits
   group-description:
@@ -60,10 +70,14 @@
       series1-type: column
       series1-format: number
       series1-label: Total FYTD Permits Issued
+      series1-min:
+      series1-max:
       series2-metric: Volume
       series2-type: line
       series2-format: number
       series2-label: Monthly Permits Issued
+      series2-min:
+      series2-max:      
 
     - title: Detailed Breakdown of Permit Types
       summary: The figure below gives a breakdown of the permitting data by different permit types. This is important to understand from the standpoint of city operations, since one new multifamily development has a bigger impact on watershed management, transport infrastructure and public safety services than a single new residential home, for example.
@@ -77,3 +91,5 @@
       series1-type: line
       series1-format: percentage
       series1-label: Percent of Total
+      series1-min:
+      series1-max:
