--- a/_data/aviation.yml
+++ b/_data/aviation.yml
@@ -8,6 +8,8 @@
       size: full
       department: DOA
       datasource: passenger_volume
+      targetBenchmark:
+      targetLabel:
       series-grouping: false
       series1-metric: Volume
       series1-type: column
@@ -29,6 +31,8 @@
       size: full
       department: DOA
       datasource: cargo_volume
+      targetBenchmark:
+      targetLabel:
       series-grouping: false
       series1-metric: Volume
       series1-type: column
@@ -53,6 +57,8 @@
       size: half
       department: DOA
       datasource: security_wait_times
+      targetBenchmark:
+      targetLabel:
       series-grouping: false
       series1-metric: Result
       series1-type: line
@@ -68,10 +74,12 @@
       size: half
       department: DOA
       datasource: customs_processing_time
+      targetBenchmark:
+      targetLabel:
       series-grouping: false
       series1-metric: Result
       series1-type: line
       series1-format: number
       series1-label: Minutes
       series1-min:
-      series1-max:      
+      series1-max:
