--- a/_data/public-works.yml
+++ b/_data/public-works.yml
@@ -8,6 +8,8 @@
     size: full
     department: DPW
     datasource: solid_waste_customer_service
+    targetBenchmark:
+    targetLabel:
     series-grouping: false
     series1-metric: Volume
     series1-type: column
@@ -29,6 +31,8 @@
     size: half
     department: DPW
     datasource: solid_waste_bin
+    targetBenchmark:
+    targetLabel:
     series-grouping: false
     series1-metric: Volume
     series1-type: column
@@ -50,6 +54,8 @@
     size: half
     department: DPW
     datasource: solid_waste_dumping
+    targetBenchmark:
+    targetLabel:
     series-grouping: false
     series1-metric: Volume
     series1-type: column
@@ -71,6 +77,8 @@
     size: full
     department: DPW
     datasource: solid_waste_missed_collections
+    targetBenchmark:
+    targetLabel:
     series-grouping: false
     series1-metric: Volume
     series1-type: column
@@ -95,6 +103,8 @@
     size: full
     department: DPW
     datasource: solid_waste_operations
+    targetBenchmark:
+    targetLabel:
     series-grouping: true
     series1-metric: Result
     series1-type: line
@@ -113,6 +123,8 @@
       size: full
       department: DPW
       datasource: transportation_customer_service
+      targetBenchmark:
+      targetLabel:
       series-grouping: false
       series1-metric: Volume
       series1-type: column
@@ -134,6 +146,8 @@
       size: half
       department: DPW
       datasource: transportation_asphalt
+      targetBenchmark:
+      targetLabel:
       series-grouping: false
       series1-metric: Volume
       series1-type: column
@@ -155,6 +169,8 @@
       size: half
       department: DPW
       datasource: transportation_concrete
+      targetBenchmark:
+      targetLabel:
       series-grouping: false
       series1-metric: Volume
       series1-type: column
@@ -177,6 +193,8 @@
       summary:
       department: DPW
       datasource: transportation_signs
+      targetBenchmark:
+      targetLabel:
       series-grouping: false
       series1-metric: Volume
       series1-type: column
@@ -197,6 +215,8 @@
       size: half
       department: DPW
       datasource: transportation_markings
+      targetBenchmark:
+      targetLabel:
       series-grouping: false
       series1-metric: Volume
       series1-type: column
@@ -217,6 +237,8 @@
       size: half
       department: DPW
       datasource: transportation_signals
+      targetBenchmark:
+      targetLabel:
       series-grouping: false
       series1-metric: Volume
       series1-type: column
@@ -238,6 +260,8 @@
       size: half
       department: DPW
       datasource: transportation_lights
+      targetBenchmark:
+      targetLabel:
       series-grouping: false
       series1-metric: Volume
       series1-type: column
